--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   
   # Utilities
   uuid: ^4.5.1
+  cryptography: ^2.7.0
+  path_provider: ^2.1.4
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
