refactor: Add encryption key configuration and update .gitignore
This commit introduces an example file for the encryption key configuration and updates `.gitignore` to prevent the actual key from being versioned.

*   **`lib/config/encryption_key.dart.example`**: Adds a new example file to guide developers on setting up their 32-byte encryption key in a `encryption_key.dart` file.
*   **`.gitignore`**: Updates the `.gitignore` file to explicitly ignore `lib/config/encryption_key.dart`, ensuring that sensitive encryption keys are not committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ lib/generated_plugin_registrant.dart
 
 # Firebase Config (arquivo com credenciais sensíveis)
 lib/config/firebase_config.dart
+lib/config/encryption_key.dart
